--- a/index.html
+++ b/index.html
@@ -38,10 +38,18 @@
         </nav>
         <ul class="site-nav list">
           <li class="list-item">
-            <a class="link contacts-details" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link contacts-details" href="mailto:info@devstudio.com">
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-mail"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
           <li class="list-item">
-            <a class="link contacts-details" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link contacts-details" href="tel:+380961111111">
+              <svg class="phone-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-phone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -62,24 +70,44 @@
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="feature-list list">
             <li class="section-card">
+              <div class="feature-icon-container">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="section-card">
+              <div class="feature-icon-container">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="section-card">
+              <div class="feature-icon-container">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="section-card">
+              <div class="feature-icon-container">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -114,16 +142,178 @@
               <img src="./images/img1.jpg" alt="фото дизайнера" width="270" />
               <h3 class="title">Игорь Демьяненко</h3>
               <p class="text" lang="en">Product Designer</p>
+              <ul class="social-media list">
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="instagram"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="twitter"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="facebook"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="linkedin"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="section-card card-set">
               <img src="./images/img2.jpg" alt="фото фронтенд-разработчика" width="270" />
               <h3 class="title">Ольга Репина</h3>
               <p class="text" lang="en">Frontend Developer</p>
+              <ul class="social-media list">
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="instagram"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="twitter"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="facebook"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="linkedin"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="section-card card-set">
               <img src="./images/img3.jpg" alt="фото маркетолога" width="270" />
               <h3 class="title">Николай Тарасов</h3>
               <p class="text" lang="en">Marketing</p>
+              <ul class="social-media list">
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="instagram"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="twitter"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="facebook"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="linkedin"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="section-card card-set">
               <img
@@ -133,6 +323,146 @@
               />
               <h3 class="title">Михаил Ермаков</h3>
               <p class="text" lang="en">UI Designer</p>
+              <ul class="social-media list">
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="instagram"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="twitter"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="facebook"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-media-item">
+                  <a
+                    class="social-media-link"
+                    href=""
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="linkedin"
+                  >
+                    <svg class="social-media-icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Постійні клієнти -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="client-list list">
+            <li class="client-group">
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="first client"
+              >
+                <svg class="client-icon" width="41" height="47">
+                  <use href="./images/icons.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-group">
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="first client"
+              >
+                <svg class="client-icon" width="40" height="52">
+                  <use href="./images/icons.svg#icon-group-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-group">
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="first client"
+              >
+                <svg class="client-icon" width="43" height="41">
+                  <use href="./images/icons.svg#icon-group-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-group">
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="first client"
+              >
+                <svg class="client-icon" width="84" height="41">
+                  <use href="./images/icons.svg#icon-group-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-group">
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="first client"
+              >
+                <svg class="client-icon" width="63" height="45">
+                  <use href="./images/icons.svg#icon-group-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-group">
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="first client"
+              >
+                <svg class="client-icon" width="94" height="44">
+                  <use href="./images/icons.svg#icon-group-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -140,20 +470,85 @@
     </main>
     <footer class="contacts">
       <div class="container">
-        <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
-        <address class="contacts-list">
-          <ul class="list">
-            <li class="list-item">
-              <a class="address-link link" href="">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li class="list-item">
-              <a class="contacts-details link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="list-item">
-              <a class="contacts-details link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="contacts-group">
+          <div class="contacts-adress">
+            <a class="logo link" href="./index.html"
+              >Web<span class="logo-secondary">Studio</span></a
+            >
+            <address class="contacts-list">
+              <ul class="list">
+                <li class="list-item">
+                  <a class="address-link link" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li class="list-item">
+                  <a class="contacts-details link" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="list-item">
+                  <a class="contacts-details link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="contacts-media">
+            <p class="contacts-media-text">присоединяйтесь</p>
+            <ul class="contacts-social-media list">
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="instagram"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="twitter"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="facebook"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="linkedin"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
