--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,18 @@
         </nav>
         <ul class="site-nav list">
           <li class="list-item">
-            <a class="link contacts-details" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link contacts-details" href="mailto:info@devstudio.com">
+              <svg class="mail-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-mail"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
           <li class="list-item">
-            <a class="link contacts-details" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link contacts-details" href="tel:+380961111111">
+              <svg class="phone-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-phone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -69,7 +77,7 @@
           </ul>
           <ul class="exemples list card">
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/web-site1.jpg" alt="Пример веб сайту" width="370" />
                 <div class="exemples-content">
                   <h3 class="title">Технокряк</h3>
@@ -78,7 +86,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/design1.jpg" alt="Пример дизайну" width="370" />
                 <div class="exemples-content">
                   <h3 class="title">Постер<span lang="en">New Orlean vs Golden Star</span></h3>
@@ -87,7 +95,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/application1.jpg" alt="Пример приложения" width="370" />
                 <div class="exemples-content">
                   <h3 class="title">Ресторан <span lang="en"></span>Seafood</h3>
@@ -96,7 +104,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/marketing1.jpg" alt="Пример работы для маркетинга" width="370" />
                 <div class="exemples-content">
                   <h3 class="title">Проект <span lang="en">Prime</span></h3>
@@ -105,7 +113,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/application2.jpg" alt="Пример приложения" width="370" />
                 <div class="exemples-content">
                   <h3 class="title">Проект <span lang="en">Boxes</span></h3>
@@ -114,7 +122,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/web-site2.jpg" alt="Пример веб сайту" width="370" />
                 <div class="exemples-content">
                   <h3 lang="en" class="title">Inspiration has no Borders</h3>
@@ -123,7 +131,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/design2.jpg" alt="Пример дизайну" width="370" />
                 <div class="exemples-content">
                   <h3 class="title">Издание <span lang="en">Limited Edition</span></h3>
@@ -132,7 +140,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/marketing2.jpg" alt="Пример работы для маркетинга" width="370" />
                 <div class="exemples-content">
                   <h3 class="title">Проект <span lang="en">LAB</span></h3>
@@ -141,7 +149,7 @@
               </a>
             </li>
             <li class="card-set">
-              <a class="link" href="">
+              <a class="link item" href="">
                 <img src="./images/application3.jpg" alt="Пример приложения" width="370" />
                 <div class="exemples-content">
                   <h3 class="title" lang="en">Growing Business</h3>
@@ -155,20 +163,85 @@
     </main>
     <footer class="contacts">
       <div class="container">
-        <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
-        <address class="contacts-list">
-          <ul class="list">
-            <li class="list-item">
-              <a class="address-link link" href="">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li class="list-item">
-              <a class="contacts-details link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="list-item">
-              <a class="contacts-details link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <div class="contacts-group">
+          <div class="contacts-adress">
+            <a class="logo link" href="./index.html"
+              >Web<span class="logo-secondary">Studio</span></a
+            >
+            <address class="contacts-list">
+              <ul class="list">
+                <li class="list-item">
+                  <a class="address-link link" href="">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li class="list-item">
+                  <a class="contacts-details link" href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="list-item">
+                  <a class="contacts-details link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="contacts-media">
+            <p class="contacts-media-text">присоединяйтесь</p>
+            <ul class="contacts-social-media list">
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="instagram"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="twitter"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="facebook"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-media-item">
+                <a
+                  class="contacts-media-link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="linkedin"
+                >
+                  <svg class="contacts-media-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
